--- a/Javascript-Drum-Kit/style/style.css
+++ b/Javascript-Drum-Kit/style/style.css
@@ -4,7 +4,23 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 800px;
+    height: 600px;
     display: flex;
 }
 
+.key {
+    font-size: 1.5rem;
+    padding: 1rem .5rem;
+    width: 100px;
+    transition: all 0.07s;
+    text-align: center;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.4);
+    text-shadow: 0 0 0 5px black;
+}
+
+.playing {
+    transform: scale(1.1);
+    border: 1px solid #c1eb4e;
+    box-shadow: 0 0 10px #c1eb4e;
+}
